{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 36,
  "lineage": "c1fc9525-681a-6c51-bbc3-f3dc52ed8476",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod_elastic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e368ddcbaf6aad16",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-039ef4544e40549b3",
            "domain": "vpc",
            "id": "eipalloc-0e368ddcbaf6aad16",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03af4bb5220dd0f20",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-35-169-1-50.compute-1.amazonaws.com",
            "public_ip": "35.169.1.50",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.prod_ig",
            "aws_network_interface.prod_ni",
            "aws_security_group.prod_security",
            "aws_subnet.prod_subnet1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:264146076987:instance/i-0f15d6f99d6745208",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f15d6f99d6745208",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-03af4bb5220dd0f20"
              }
            ],
            "primary_network_interface_id": "eni-03af4bb5220dd0f20",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "35.169.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0140a714cab777751",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e2b85d7070e3497",
            "tags": {
              "Name": "Web_Server_via_Terraform"
            },
            "tags_all": {
              "Name": "Web_Server_via_Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddffb20151ff1c79"
            ]
          },
          "dependencies": [
            "aws_network_interface.prod_ni"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264146076987:internet-gateway/igw-0dd48a133d1799ecb",
            "id": "igw-0dd48a133d1799ecb",
            "owner_id": "264146076987",
            "tags": {
              "Name": "Prod_IG"
            },
            "tags_all": {
              "Name": "Prod_IG"
            },
            "vpc_id": "vpc-074924df035bc489e"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "prod_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264146076987:network-interface/eni-03af4bb5220dd0f20",
            "id": "eni-03af4bb5220dd0f20",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:a1:7b:6d:d4:55",
            "owner_id": "264146076987",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ddffb20151ff1c79"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e2b85d7070e3497"
          },
          "dependencies": [
            "aws_security_group.prod_security",
            "aws_subnet.prod_subnet1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264146076987:route-table/rtb-0ff0f234595f87fd8",
            "id": "rtb-0ff0f234595f87fd8",
            "owner_id": "264146076987",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd48a133d1799ecb",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd48a133d1799ecb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod_Route"
            },
            "tags_all": {
              "Name": "Prod_Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-074924df035bc489e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod_ig",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_accociate_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d12d3fd62a691d1",
            "route_table_id": "rtb-0ff0f234595f87fd8",
            "subnet_id": "subnet-01e2b85d7070e3497"
          },
          "dependencies": [
            "aws_internet_gateway.prod_ig",
            "aws_route_table.prod_route",
            "aws_subnet.prod_subnet1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264146076987:security-group/sg-0ddffb20151ff1c79",
            "description": "Allow Web Inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddffb20151ff1c79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "264146076987",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_Web"
            },
            "tags_all": {
              "Name": "Allow_Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-074924df035bc489e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264146076987:subnet/subnet-01e2b85d7070e3497",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e2b85d7070e3497",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264146076987",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod_Sub"
            },
            "tags_all": {
              "Name": "Prod_Sub"
            },
            "vpc_id": "vpc-074924df035bc489e"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:264146076987:vpc/vpc-074924df035bc489e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ced21d56b6ab7405",
            "default_route_table_id": "rtb-0ec045c6e7bd7d1b2",
            "default_security_group_id": "sg-07664582db578f9ca",
            "dhcp_options_id": "dopt-059920d6a896e0967",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-074924df035bc489e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec045c6e7bd7d1b2",
            "owner_id": "264146076987",
            "tags": {
              "Name": "Prod_VPC"
            },
            "tags_all": {
              "Name": "Prod_VPC"
            }
          }
        }
      ]
    }
  ]
}